# rusty-piano

./: .gitignore  Cargo.toml  README.md  collection.jsonl  test.jsonl
sample_requests/: POST_v6_collections_getSortedByTypes.json
sample_responses/: GET_v1_auth_login.json  POST_v1_playback_source  POST_v4_catalog_getDetails.json  POST_v6_collections_getSortedByTypes.json
src/: app.rs  bandcamp.rs  collection.rs  crypto.rs  download_manager.rs  events.rs  json_l.rs  lib.rs  main.rs  player.rs  secrets.rs
