[package]
name = "rusty-piano"
version = "0.1.0"
edition = "2024"

[dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
reqwest = { version = "0.12.22", features = ["blocking", "json", "cookies"] }
rodio = { version = "0.21.1", default-features = false, features = ["playback", "mp3"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
whoami = "1.6.0"
