[package]
name = "rusty-piano"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
reqwest = { version = "0.12.22", features = ["blocking", "json", "cookies"] }
rodio = { version = "0.21.1", default-features = false, features = ["playback", "mp3"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
sha1 = "0.10.6"
uuid = "1.17.0"
whoami = "1.6.0"
