[package]
name = "rusty-piano"
version = "0.1.0"
edition = "2024"
default-run = "rusty-piano"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
hex = "0.4.3"
hmac = "0.12.1"
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.23", features = ["blocking", "json", "cookies"] }
rodio = { version = "0.21.1", default-features = false, features = ["playback", "mp3"]}
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
sha1 = "0.10.6"
thiserror = "2.0.16"
uuid = "1.18.0"
whoami = "1.6.1"
